fixed label overflow

--- a/lista/style.css
+++ b/lista/style.css
@@ -85,7 +85,7 @@ td {
     width: 100%;
     height: 100%;
     background-color: var(--modal-bg);
-    position: absolute;
+    position: fixed;
     top: 0;
     z-index: 5;
     display: flex;
@@ -98,10 +98,6 @@ td {
 .regjistrimi-wrapper {
     margin: 2em;
     max-height: auto;
-}
-
-.row-margin {
-    margin: 0em 3em 0em 0em;
 }
 
 .submit-margin {
@@ -119,6 +115,7 @@ td {
     padding-bottom: 1em;
 }
 
-.form-label {
+.label-fix {
     overflow: hidden;
+    white-space: nowrap;
 }
